2009-05-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: freeze version 2.2.3

2009-05-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/doc/carrier_expert.dox: start fleshing out the documentation
	on how new carriers can be made.

2009-05-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/Matrix.cpp: fix for Matrix serialization,
	thanks to Stephane Lallee for report that led to this.

	* src/libYARP_sig/harness/MatrixTest.cpp: test for compatibility
	of Matrix serialization and standard bottle format.

2009-05-08 Alessandro Scalzo <alessandro@liralab.it>
	* src/libYARP_OS/include/yarp/os/Run.h
	* src/libYARP_dev/src/Run.cpp
	* scr/yarprun/

	Zombie mangement added, APIs.
	yarprun executable added.

2009-04-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: bugfix: when closing
	a port, and shutting down connections, deal correctly with
	disconnections that fail because the port on the other 
	side no longer exists.  

	* src/libYARP_OS/src/PortCoreInputUnit.cpp: bugfix: when
	"success" flag of a read was clobbered (see below), the port 
	would fail to correctly move on to the next payload.

	* src/libYARP_OS/src/Port.cpp: bugfix: "success" flag of a 
	read could get clobbered by competing RPC calls.

2009-04-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: patch from Philipp Robbel to 
	fix swig wrapping for Port::write with two arguments.
	
2009-04-14 Alessandro Scalzo <alessandro@liralab.it>
	* src/libYARP_OS/include/yarp/os/Run.h
	* src/libYARP_OS/include/yarp/os/impl/Companion.h
	* src/libYARP_dev/src/Run.cpp
	* src/libYARP_dev/src/Companion.cp

	The new yarp run.

2009-03-18 Alessandro Scalzo <alessandro@liralab.it>
	* src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h
	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h
	* src/libYARP_dev/include/yarp/dev/ServerFrameGrabber.h
	* src/libYARP_dev/include/yarp/dev/TestFrameGrabber.h